ntg big upadate

--- a/Clients/src/components/Home/Home.scss
+++ b/Clients/src/components/Home/Home.scss
@@ -18,7 +18,7 @@
 /* grid */
 .container {
   display: grid;
-  height: auto;
+  height: 100%;
   padding-bottom: 10vh;
 }
 /* when on desktop or larger screens */
