--- a/Clients/src/components/Blog/Blog.scss
+++ b/Clients/src/components/Blog/Blog.scss
@@ -2,6 +2,7 @@
   padding-top: 10vh;
   padding-bottom: 10vh;
   background-color: #f4fafa;;
+  background-color: var(--background);
 }
 .blog-layout{
     background-color: aqua;
