--- a/Clients/src/components/Footer/Footer.css
+++ b/Clients/src/components/Footer/Footer.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   padding-top: 10vh;
   padding-bottom: 10vh;
-  background-color: #f4fafa;
+  background-color: var(--background);
 }
 
 .follow {
