--- a/Clients/src/components/Resume/Resume.scss
+++ b/Clients/src/components/Resume/Resume.scss
@@ -2,7 +2,7 @@
   background-color: var(--background);
   padding-top: 5vh;
   padding-bottom: 5vh;
-  background-color: var(--background);
+
 }
 
 .resume-container {
@@ -51,10 +51,10 @@
   font-family: "Roboto", sans-serif;
   font-weight: 600;
 }
-.icons:hover{
-  background-color:#90acd1;
-  color: #fff;
-}
+// .icons:hover{
+//   background-color:#90acd1;
+//   color: #fff;
+// }
 .skills-card{
 margin: 2rem 2rem 1rem 1rem;
 }
