--- a/Clients/src/App.css
+++ b/Clients/src/App.css
@@ -1,10 +1,16 @@
-* {
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-  font-family: "Roboto", sans-serif;
+:root {
+  --min-height: 80vh;
+  --top-gap: 3.95vw;
+  --right-gap: 5.11vw;
+  --left-gap: 6.31vw;
+  --fontsize: 2.8rem;
+  --sub-heading: #90acd1;
+  --main-font: #222222;
+  --special-font: #ff0000d5;
+  --background: #e1f5fe;
+  --light-heading: #777777;
 }
-::selection {
-  background-color: #e45447;
-  color: #fff;
+
+.Home {
+  background-color: var(--background);
 }
