--- a/Clients/src/components/Navbar/Navbar.css
+++ b/Clients/src/components/Navbar/Navbar.css
@@ -114,3 +114,50 @@
     cursor: pointer;
   }
 }
+
+.checkbox {
+  opacity: 0;
+  position: absolute;
+  width: 15px;
+  height: 15px;
+}
+
+.label {
+  margin-top: 10px;
+  width: 50px;
+  height: 20px;
+  background: var(--background);
+  display: flex;
+  border-radius:50px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  position: relative;
+  transform: scale(1.5);
+}
+
+.ball {
+  width: 18px;
+  height: 18px;
+  background-color: white;
+  position: absolute;
+  margin-top: -0.5px;
+  /* left: 2px; */
+  border-radius: 40%;
+  transition: transform 0.2s linear;
+}
+
+/*  target the elemenent after the label*/
+.checkbox:checked + .label .ball{
+  transform: translateX(24px);
+}
+
+.fa-moon {
+ 
+  color: pink;
+}
+
+.fa-sun {
+
+  color: yellow;
+}
