done today work

--- a/Clients/src/components/AboutMe/About.css
+++ b/Clients/src/components/AboutMe/About.css
@@ -1,6 +1,6 @@
 
 .About {
-  background-color: var(--background);
+  /* background-color: var(--background); */
   padding-top: 10vh;
   padding-bottom: 5vh;
 }
