--- a/Clients/src/components/Blog/Blog.scss
+++ b/Clients/src/components/Blog/Blog.scss
@@ -1,7 +1,7 @@
 .Blog{
   padding-top: 10vh;
   padding-bottom: 10vh;
-  background-color: var(--background);
+  // background-color: var(--background);
 }
 .blog-layout{
     background-color: aqua;
