--- a/Clients/src/components/Footer/Footer.css
+++ b/Clients/src/components/Footer/Footer.css
@@ -1,3 +1,5 @@
+
+
 .Footer {
   display: flex;
   align-items: center;
@@ -5,7 +7,7 @@
   flex-direction: column;
   padding-top: 10vh;
   padding-bottom: 10vh;
-  background-color: var(--background);
+  /* background-color: var(--background); */
 }
 
 .follow {
@@ -55,3 +57,31 @@
   border: 2px solid transparent;
   cursor: pointer;
 }
+
+
+section{
+    width: 0%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.img11{
+  height: 100px;
+  width: 50px;
+}
+/* .btn_container{
+    margin-top: 50px;
+} */
+/* .bulb_btn{
+    font-family: 'Baloo Bhai 2', cursive;
+    width: 100px;
+    height: 50px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: #34dab4;
+    font-size: 30px;
+} */
