--- a/Clients/src/index.css
+++ b/Clients/src/index.css
@@ -1,4 +1,20 @@
+:root {
+  --min-height: 80vh;
+  --top-gap: 3.95vw;
+  --right-gap: 5.11vw;
+  --left-gap: 6.31vw;
+  --fontsize: 2.8rem;
+  --sub-heading: #90acd1;
+  --main-font: #222222;
+  --special-font: #ff0000d5;
+  --background: #e1f5fe;
+  --light-heading: #777777;
+}
+
+
 body {
+  background-color: var(--background);
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
